add deconz alarmsystems resolves https://github.com/iobroker-community-adapters/ioBroker.hue-extended/issues/180 for me

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "Synchronisiere auch doppelte Szenen",
     "syncSchedules": "Synchronisation der Zeitpläne",
     "syncSensors": "Synchronisation der Sensoren",
+    "syncAlarmsystems": "Synchronisation der Alarmsysteme",
     "tab_alexa": "Alexa Integration",
     "tab_config": "Konfiguration",
     "tab_donate": "Spenden",
