--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "Synchronize duplicated scenes as well",
     "syncSchedules": "Synchronize Schedules",
     "syncSensors": "Synchronize Sensors",
+    "syncAlarmsystems": "Synchronize Alarmsystems",
     "tab_alexa": "Alexa integration",
     "tab_config": "Configuration",
     "tab_donate": "Donation",
