--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "Sincronizar duplicar escenas así",
     "syncSchedules": "Sincronizar Los Horarios",
     "syncSensors": "Sincronizar Los Sensores",
+    "syncAlarmsystems": "Sincronizar los sistemas de alarma",
     "tab_alexa": "Alexa integración",
     "tab_config": "Configuración",
     "tab_donate": "Donación",
