--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "Synchroniser dupliqué scènes ainsi",
     "syncSchedules": "Synchroniser Les Calendriers",
     "syncSensors": "Synchroniser Des Capteurs",
+    "syncAlarmsystems": "Synchroniser Les Systèmes D'Alarme",
     "tab_alexa": "Alexa intégration",
     "tab_config": "Configuration",
     "tab_donate": "Don",
