--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "Sincronizzare duplicato scene",
     "syncSchedules": "Sincronizzare Orari",
     "syncSensors": "Sincronizzare I Sensori",
+    "syncAlarmsystems": "Sincronizzare I Sistemi Di Allarme",
     "tab_alexa": "Alexa integrazione",
     "tab_config": "Configurazione",
     "tab_donate": "Donazione",
