--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "Synchroniseren gedupliceerd scènes en",
     "syncSchedules": "Synchroniseren Schema ' S",
     "syncSensors": "Synchroniseren Sensoren",
+    "syncAlarmsystems": "Synchroniseren Alarmsystemen",
     "tab_alexa": "Alexa integratie",
     "tab_config": "Configuratie",
     "tab_donate": "Donatie",
