--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "Synchronizacja powielane sceny również",
     "syncSchedules": "Zsynchronizować Rozkłady Jazdy",
     "syncSensors": "Synchronizować Czujniki",
+    "syncAlarmsystems": "Synchronizacja systemów alarmowych",
     "tab_alexa": "Alexa integracji",
     "tab_config": "Konfiguracji",
     "tab_donate": "Darowizna",
