--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "Sincronizar duplicado cenas bem",
     "syncSchedules": "Sincronizar Agendas",
     "syncSensors": "Sincronizar Sensores",
+    "syncAlarmsystems": "Sincronizar Sistemas De Alarme",
     "tab_alexa": "Alexa integração",
     "tab_config": "Configuração",
     "tab_donate": "Doação",
