--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "Синхронизация дублируются сцены также",
     "syncSchedules": "Синхронизировать Расписания",
     "syncSensors": "Синхронизировать Датчики",
+    "syncAlarmsystems": "Синхронизация систем сигнализации",
     "tab_alexa": "Алекса интеграции",
     "tab_config": "Конфигурации",
     "tab_donate": "Пожертвование",
