--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -59,6 +59,7 @@
     "syncScenesDuplicates": "同步重复的场景",
     "syncSchedules": "同步时间表",
     "syncSensors": "同步传感器",
+    "syncAlarmsystems": "同步报警系统",
     "tab_alexa": "Alexa的一体化",
     "tab_config": "配置",
     "tab_donate": "捐赠",
